Add ARIA tabpanels and mode syncing
Give each mode tab an id and aria-controls, add corresponding hidden tabpanel elements for each mode in the HTML, and update the page JS to manage showing/hiding panels and syncing ARIA attributes. Also introduce modeTabPanels selection and a JSONL stream threshold constant, refactor setActiveTab to toggle panel.hidden and aria-hidden based on aria-controls, and reorganize some UI/update functions. The context dump metadata was updated to include the worker file and adjusted counts/timestamp.

--- a/json-tool.html
+++ b/json-tool.html
@@ -229,8 +229,7 @@
         }
 
         .file-drop-zone:hover,
-        .file-drop-zone.drag-active,
-        .file-drop-zone:focus-visible {
+        .file-drop-zone.drag-active {
             border-color: var(--accent);
             background: rgba(var(--accent-rgb), 0.08);
             outline: none;
@@ -490,9 +489,6 @@
                         <div
                             id="fileDropZone"
                             class="file-drop-zone"
-                            tabindex="0"
-                            role="button"
-                            aria-label="Drag and drop a JSON or JSONL file, or press Enter to choose a file"
                         >
                             <div class="file-drop-main">
                                 <span class="material-icons" aria-hidden="true">upload_file</span>
