Improve date-time tool and snippet UI
Add color classes for status messages and clarify that custom datetime input is interpreted in the browser's local time. Harden Intl usage checks and show a clear error when Intl.DateTimeFormat is unavailable. Remove fragile timezone conversion helpers (toZonedDate/pad) and use the resolved input date directly for calculations, and adjust Badíʿ conversion to use that date. Refactor clipboard copying to an async flow using navigator.clipboard with fallbacks (textUtilsClipboardWrite and execCommand textarea fallback) and better error reporting. In font-awesome-chooser, move the generated code snippet block into the options column (remove duplicate) and simplify the panel markup.

--- a/font-awesome-chooser.html
+++ b/font-awesome-chooser.html
@@ -413,6 +413,14 @@
 
                         <div class="option-group">
 
+                            <h4><span class="material-icons" style="font-size: 20px;">code</span>Snippet</h4>
+
+                            <div class="code-block" id="outputSnippet" aria-live="polite" aria-label="Generated code snippet"></div>
+
+                        </div>
+
+                        <div class="option-group">
+
                             <label>Selected Icon</label>
 
                             <div class="info-row">
@@ -445,7 +453,7 @@
 
 
 
-                    <div class="panel panel-flex">
+                    <div class="panel">
 
                         <div>
 
@@ -458,16 +466,6 @@
                                 <div id="gridPlaceholder" class="muted" style="grid-column:1/-1; text-align:center;">Select a category to view icons.</div>
 
                             </div>
-
-                        </div>
-
-
-
-                        <div>
-
-                            <h4><span class="material-icons" style="font-size: 20px;">code</span>Snippet</h4>
-
-                            <div class="code-block" id="outputSnippet" aria-live="polite" aria-label="Generated code snippet"></div>
 
                         </div>
 
